zz-out/pass14_run2/zz-scripts/chapter02/plot_fig02_calibration.err
  File "/home/jplal/MCGT/zz-scripts/chapter02/plot_fig02_calibration.py", line 58
    parser.add_argument(
                       ^
SyntaxError: '(' was never closed
